; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_generic.c_generic_utime.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_generic.c_generic_utime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32 }
%struct.timespec = type { i32 }
%struct.mount = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.mount*, i8*, i32, i32)* }

@MAX_PATH = common dso_local global i32 0, align 4
@N_SYMLINK_FOLLOW = common dso_local global i32 0, align 4
@N_SYMLINK_NOFOLLOW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @generic_utime(%struct.fd* %0, i8* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.timespec, align 4
  %8 = alloca %struct.timespec, align 4
  %9 = alloca %struct.fd*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca %struct.mount*, align 8
  %17 = getelementptr inbounds %struct.timespec, %struct.timespec* %7, i32 0, i32 0
  store i32 %2, i32* %17, align 4
  %18 = getelementptr inbounds %struct.timespec, %struct.timespec* %8, i32 0, i32 0
  store i32 %3, i32* %18, align 4
  store %struct.fd* %0, %struct.fd** %9, align 8
  store i8* %1, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  %19 = load i32, i32* @MAX_PATH, align 4
  %20 = zext i32 %19 to i64
  %21 = call i8* @llvm.stacksave()
  store i8* %21, i8** %12, align 8
  %22 = alloca i8, i64 %20, align 16
  store i64 %20, i64* %13, align 8
  %23 = load %struct.fd*, %struct.fd** %9, align 8
  %24 = load i8*, i8** %10, align 8
  %25 = load i32, i32* %11, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %5
  %28 = load i32, i32* @N_SYMLINK_FOLLOW, align 4
  br label %31

29:                                               ; preds = %5
  %30 = load i32, i32* @N_SYMLINK_NOFOLLOW, align 4
  br label %31

31:                                               ; preds = %29, %27
  %32 = phi i32 [ %28, %27 ], [ %30, %29 ]
  %33 = call i32 @path_normalize(%struct.fd* %23, i8* %24, i8* %22, i32 %32)
  store i32 %33, i32* %14, align 4
  %34 = load i32, i32* %14, align 4
  %35 = icmp slt i32 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %31
  %37 = load i32, i32* %14, align 4
  store i32 %37, i32* %6, align 4
  store i32 1, i32* %15, align 4
  br label %54

38:                                               ; preds = %31
  %39 = call %struct.mount* @find_mount_and_trim_path(i8* %22)
  store %struct.mount* %39, %struct.mount** %16, align 8
  %40 = load %struct.mount*, %struct.mount** %16, align 8
  %41 = getelementptr inbounds %struct.mount, %struct.mount* %40, i32 0, i32 0
  %42 = load %struct.TYPE_2__*, %struct.TYPE_2__** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 0
  %44 = load i32 (%struct.mount*, i8*, i32, i32)*, i32 (%struct.mount*, i8*, i32, i32)** %43, align 8
  %45 = load %struct.mount*, %struct.mount** %16, align 8
  %46 = getelementptr inbounds %struct.timespec, %struct.timespec* %7, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = getelementptr inbounds %struct.timespec, %struct.timespec* %8, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32 %44(%struct.mount* %45, i8* %22, i32 %47, i32 %49)
  store i32 %50, i32* %14, align 4
  %51 = load %struct.mount*, %struct.mount** %16, align 8
  %52 = call i32 @mount_release(%struct.mount* %51)
  %53 = load i32, i32* %14, align 4
  store i32 %53, i32* %6, align 4
  store i32 1, i32* %15, align 4
  br label %54

54:                                               ; preds = %38, %36
  %55 = load i8*, i8** %12, align 8
  call void @llvm.stackrestore(i8* %55)
  %56 = load i32, i32* %6, align 4
  ret i32 %56
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @path_normalize(%struct.fd*, i8*, i8*, i32) #2

declare dso_local %struct.mount* @find_mount_and_trim_path(i8*) #2

declare dso_local i32 @mount_release(%struct.mount*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
